@@ -3,6 +3,7 @@ Dec 09 2003  3.1.0  Fixed prism54g override of channel change failure in
                     Added more useful error messages to kismet_server
                     Finally fixed kismet_drone and removed debugging info.
                      Should be stable for normal use.
+                    Added rintf define for uclibc
 Dec 08 2003  3.1.0  Fixed util.h to include math.h outside of the wext
                      ifdef.
                     Removed mentions of signal quality from the panels client.
